--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "johndick-me",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://johndck.github.io/johndick-me-react-build",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0"
