--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "johndickmev2",
+  "name": "johndick-me",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,22 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "postcss-load-config": "^5.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.36",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.1.6"
+    "vite": "^5.1.0"
   }
 }
